--- a/conf/readme
+++ b/conf/readme
@@ -14,3 +14,7 @@ go get github.com/astaxie/beego/orm
 
 5.程序初始化执行顺序
 入口main.go --> models.init() --> router.init() --> sysinit.init() --> main.init() --> main.go.main()
+
+6.id:wx3b7bf2440d8f7edf
+
+7.secret:57d1d23c42d010ae99a0aed121ddb8b4
